# SynapseAI

./: .gitignore  Makefile  docker-compose.yml
.kiro/specs/user-authentication/: .config.kiro  requirements.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  billing.py  chat.py
backend/app/core/: config.py  database.py  exceptions.py  redis.py  security.py
backend/app/models/: __init__.py  chat.py  refresh_token.py  subscription.py  token_usage.py  user.py  workspace.py
backend/app/schemas/: auth.py  billing.py  chat.py
backend/app/services/: __init__.py  auth_service.py  billing_service.py  chat_service.py  email_service.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: document_tasks.py  email_tasks.py
frontend/: .prettierrc  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/api/: auth.ts  billing.ts  chat.ts  client.ts  documents.ts  index.ts  workspaces.ts
frontend/src/lib/stores/: auth.ts  index.ts  theme.ts  workspace.ts
frontend/src/lib/utils/: cn.ts  format.ts  validation.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/app/: +layout.svelte  +page.svelte
frontend/src/routes/forgot-password/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/pricing/: +page.svelte
frontend/src/routes/register/: +page.svelte
(+20 files in other folders)
